# Long-Beach-Rocketry-25-26

./: .clang-format  .clangd  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  SETUP.md  TODO.md  docker-compose.yml  flash.ps1  format_check.sh  make.ps1  make.sh  msg.ps1
.devcontainer/: devcontainer.json
.devcontainer/develop/: devcontainer.json
.devcontainer/hardware/: devcontainer.json
.github/workflows/: ci-actions.yml
app/: CMakeLists.txt
app/a_nick_blink/: CMakeLists.txt  blink.cc  blink.h
app/a_nick_blink/bsp_l476/: CMakeLists.txt  l476_board.cc
app/airbrake_test/: main.cc
app/airbrake_test/control/: airbrake.cc  airbrake.h
app/blink/: CMakeLists.txt  board.h  main.cc
app/blink/bsp_h723/: CMakeLists.txt  h723_board.cc
app/blink/bsp_l476/: CMakeLists.txt  blink_bsp.cc  blink_bsp.h  hal_timebase.c  l476_board.cc
app/bmp390_test/: CMakeLists.txt  board.h  main.cc
app/bmp390_test/bsp_h723/: CMakeLists.txt  h723_board.cc
app/bmp390_test/bsp_l476/: CMakeLists.txt  l476_board.cc
app/can_test/: CMakeLists.txt  board.h  main.cc
app/can_test/bsp_h723/: CMakeLists.txt  h723_board.cc
app/crc_test/: CMakeLists.txt  board.h  main.cc
app/crc_test/bsp_h723/: CMakeLists.txt  h723_board.cc
app/drv8245_test/: CMakeLists.txt  board.h  main.cc
app/drv8245_test/bsp_h723/: CMakeLists.txt  h723_board.cc
app/drv8245_test/bsp_l476/: CMakeLists.txt  l476_board.cc
app/drv8245_test/bsp_pps/: CMakeLists.txt  pps_board.cc
app/drv8874_test/: CMakeLists.txt  board.h  main.cc
app/drv8874_test/bsp_l476/: CMakeLists.txt  l476_board.cc
app/generic_test/: main.cc
app/i2c_test/: CMakeLists.txt  board.h  main.cc
app/i2c_test/bsp_h723/: CMakeLists.txt  h723_board.cc
app/i2c_test/bsp_l476/: CMakeLists.txt  l476_board.cc
app/imu_test/: CMakeLists.txt  board.h  main.cc
app/imu_test/bsp_h723/: CMakeLists.txt  h723_board.cc
app/imu_test/bsp_l476/: CMakeLists.txt  imu_app_bsp.cc  imu_app_bsp.h  l476_board.cc
app/imu_test/bsp_sensors/: CMakeLists.txt  imu_app_bsp.cc  imu_app_bsp.h
app/imu_test/docs/: TESTING.md
app/nanopb_test/: CMakeLists.txt  board.h  main.cc
app/nanopb_test/BSP_H723/: CMakeLists.txt
app/pps/: main.cc  pps.cc  pps.h
app/pps/bsp/: motor_if.h
app/pps_app/: CMakeLists.txt  board.h  pps.h
app/pps_app/helpers/: pps_helpers.h
app/pps_app/motor_support/: dc_motor.cc  dc_motor.h
app/pps_board/: CMakeLists.txt  board.h  main.cc
app/pps_test/: CMakeLists.txt  board.h  main.cc  pps.cc  pps.h
app/pps_test/bsp/: motor_if.cc  motor_if.h
app/pps_test/bsp_pps/: CMakeLists.txt  motor_if.cc  motor_if.h
app/pps_test/bsp_pps/hw/: pps_hw.cc  pps_hw.h
app/pps_test/helpers/: CMakeLists.txt  pps_helpers.cc  pps_helpers.h
app/pps_test/motor_support/: CMakeLists.txt  dc_motor.cc  dc_motor.h  motor_if.cc  motor_if.h
app/pwm_test/: CMakeLists.txt  board.h  main.cc
app/rs485_test/: CMakeLists.txt  board.h  main.cc
app/servo_test/: CMakeLists.txt  board.h  main.cc
app/sitl_test/: main  main.cpp
app/spi_test/: CMakeLists.txt  board.h  main.cc  main_h7.cc  main_l4.cc  spi_app.cpp
app/spi_test/BSP_H723/: CMakeLists.txt  spi_app_bsp.cc
app/spi_test/BSP_L476/: CMakeLists.txt  note.txt  spi_app_bsp.cc  spi_app_bsp.cpp  spi_app_bsp.h
app/sysclk_test/: CMakeLists.txt  board.h  main.cc
app/timebase_test/: CMakeLists.txt  board.h  main.cc
app/usart_app/: CMakeLists.txt  board.h  main.cc  main.cpp  main_pb_test.cc  usartboard.h
app/usart_app/BSP_H723/: CMakeLists.txt  usart_app_bsp.cc
app/usart_app/BSP_L476/: CMakeLists.txt  usart_app_bsp.cc  usart_app_bsp.cpp  usart_app_bsp.h
app/usart_app/pb_helper/: CMakeLists.txt  usart_pb_helper.cc  usart_pb_helper.h
app/usart_pipe_test/: CMakeLists.txt  board.h  main.cc
app/w25q_test/: CMakeLists.txt  main.cc
cmake/: build-util.cmake  gcc-m7f.cmake
common/: CMakeLists.txt
common/core/: CMakeLists.txt
common/core/container/: CMakeLists.txt  ring_buffer.cc  ring_buffer.h  ring_buffer_test.cc
common/core/network/pipeline/: CMakeLists.txt  usart_pipe.cc  usart_pipe.h
common/core/network/telemetry/: CMakeLists.txt  telemetry.cc  telemetry.h
common/core/periph/bno055/: CMakeLists.txt  bno055_imu.cc  bno055_imu.h
common/core/periph/thvd1420/: CMakeLists.txt  rs485.h  rs485_test.cc
common/core/protobuff/: CMakeLists.txt  cmd_msg.h  nanopb.h  pb_cmd.cc  pb_cmd.h  proto.c  proto.cc  protobuff.pb.c  protobuff.pb.h  protobuff.proto  test.cc
common/core/protobuff/built/: CMakeLists.txt  protobuff.pb.c  protobuff.pb.h
common/core/protobuff/docs/: README.md
common/core/protobuff/pb_helper/: CMakeLists.txt  pb.cc  pb.h
common/drivers/: CMakeLists.txt
common/drivers/bus/: CMakeLists.txt  can.h  i2c.cc  i2c.h  imu.h  spi.h  usart.h  usart_andrew.h
common/drivers/checksum/: crc.h
common/drivers/io/: gpio.h  pwm.h
common/drivers/platform/bno055/: CMakeLists.txt  bno055.cc  bno055.h  bno055_imu.cc  bno055_imu.h  imu_math.h
common/drivers/platform/drv8245/: CMakeLists.txt  drv8245.cc  drv8245.h
common/drivers/platform/stm32h7/: CMakeLists.txt  st_can.cc  st_can.h  st_crc.cc  st_crc.h  st_gpio.cc  st_gpio.h  st_i2c.cc  st_i2c.h  st_pwm.cc  st_pwm.h  st_spi.cc  st_spi.h  st_sysclk.cc  st_sysclk.h  st_timebase.cc  st_timebase.h  st_usart.cc  st_usart.h  st_usart_andrew.cc  st_usart_andrew.h
common/drivers/platform/stm32l4/: CMakeLists.txt  nick_uart.cc  nick_uart.h  st_gpio.cc  st_gpio.h  st_i2c.cc  st_i2c.h  st_i2c_module.cc  st_i2c_module.h  st_pwm.cc  st_pwm.h  st_spi.cc  st_spi.h  st_spi_defs.h  st_spi_factory.cc  st_spi_factory.h  st_spi_module.cc  st_spi_module.h  st_spi_pins.h  st_spi_settings.h  st_sys_clock.cc  st_sys_clock.h  st_usart.cc  st_usart.cpp  st_usart.h  st_usart_factory.cc  st_usart_factory.h  st_usart_module.cc  st_usart_module.h
common/drivers/time/: sys_clock.h  timebase.h
common/drivers/transceiver/: rs485.h
common/drivers/utils/: CMakeLists.txt  delay.cc  delay.h
docs/: timebase-guide.md
ekf/: ekf_main.cpp  kalman.cc  kalman.cpp  kalman.h  kalman.hpp
mcu_support/: CMakeLists.txt
(+130 files in other folders)
